# stompman

./: .gitignore  AGENTS.md  Justfile  README.md  conftest.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
examples/: consumer.py  faststream_broadcast.py  producer.py  t.py
