[project]
name = "stompman-workspace"
requires-python = ">=3.11"
version = "0"

[dependency-groups]
dev = [
    "anyio==4.12.1",
    "faker==40.1.2",
    "hypothesis==6.151.4",
    "mypy==1.19.1",
    "polyfactory==3.2.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-timeout==2.4.0",
    "pytest-rerunfailures==16.1",
    "ruff==0.14.14",
    "uvloop==0.22.1",
]
ws = [
    "websockets==16.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
stompman = { workspace = true }


[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
strict = true

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ASYNC109",
    "COM812",
    "CPY001",
    "D1",
    "D203",
    "D213",
    "DOC201",
    "DOC501",
    "ISC001",
    "PLC2701",
    "PLC2801",
    "PLR0913",
    "SLF001"
]
extend-per-file-ignores = { "*/test_*/*" = ["S101", "SLF001", "ARG", "PLR6301"] }

[tool.pytest.ini_options]
addopts = "--cov -s -vv --reruns 6 --only-rerun FailedAllConnectAttemptsError"

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_also = ["if TYPE_CHECKING:"]
